--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ schemars = "0.8.8"
 serde = "1.0.136"
 serde_json = "1.0.79"
 warc = "0.3.1"
+avro-rs = { version = "0.13.0", features = ["snappy"]}
+
