--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ serde_json = "1.0.79"
 warc = "0.3.1"
 avro-rs = { version = "0.13.0", features = ["snappy"]}
 
+#parquet = {version="11.1.0", optional=true}
+parquet = {version="11.1.0", optional=false}
+lazy_static = "1.4.0"
