--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "oscar-io"
 version = "0.1.0"
 edition = "2021"
+description = "Readers/Writers for OSCAR Corpora."
+documentation = "https://docs.rs/oscar-io"
+homepage = "https://oscar-corpus.com"
+repository = "https://github.com/oscar-corpus/oscar-io"
+license = "Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
