--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ warc = { version = "0.3.1", features = ["with_serde"]}
 avro-rs = { version = "0.13.0", features = ["snappy"]}
 oxilangtag = { version = "0.1.3", features = ["serde"]}
 
+[dev-dependencies]
+tempfile = "3.3.0"
+
