--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ warc = { version = "0.3.1", features = ["with_serde"] }
 
 avro-rs = { version = "0.13.0", features = ["snappy"] }
 oxilangtag = { version = "0.1.3", features = ["serde"] }
+zstd = "0.12.4"
 
 [dev-dependencies]
 tempfile = "3.3.0"
