--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,29 +2,31 @@ name: Rust
 
 on:
   push:
-    branches: [ main, dev ]
+    branches: [main, dev]
   pull_request:
-    branches: [ main, dev ]
+    branches: [main, dev]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: cargo build --verbose
+      - uses: actions/checkout@v2
+      - name: Build
+        run: cargo build --verbose
 
-    - name: Run tests
-      run: cargo test --verbose
-      
-    - name: Run cargo-tarpaulin
-      uses: actions-rs/tarpaulin@v0.1
-      continue-on-error: true
-      
-    - name: Upload to codecov.io
-      uses: codecov/codecov-action@v1
+      - name: Run tests
+        run: cargo test --verbose
+
+      - name: Run cargo-tarpaulin
+        uses: actions-rs/tarpaulin@v0.1
+        with:
+          version: 0.22.0
+          args: "--avoid-cfg-tarpaulin"
+        continue-on-error: true
+
+      - name: Upload to codecov.io
+        uses: codecov/codecov-action@v1
